简单封装了demo的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/layout/activity_main.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/layout/activity_main.xml
@@ -5,39 +5,9 @@
              android:id="@+id/root_view"
              android:layout_height = "match_parent">
 
-	<SurfaceView
-			android:id="@+id/sv_video"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_gravity="center"/>
-	<LinearLayout android:layout_width = "wrap_content"
-	              android:layout_height = "wrap_content">
-		<Button
-				android:id="@+id/tui_btn"
-				android:layout_width = "wrap_content"
-		        android:layout_height = "wrap_content"
-		android:text="快退"/>
-		<Button
-				android:id="@+id/jin_btn"
-				android:layout_width = "wrap_content"
-		        android:layout_height = "wrap_content"
-		        android:text="快进"/>
-		<Button
-				android:id="@+id/pause_btn"
-				android:layout_width = "wrap_content"
-				android:layout_height = "wrap_content"
-				android:text="暂停"/>
-		<Button
-				android:id="@+id/start_btn"
-				android:layout_width = "wrap_content"
-				android:layout_height = "wrap_content"
-				android:text="播放"/>
-		<TextView
-				android:id="@+id/duration_txt"
-				android:layout_width = "wrap_content"
-				android:layout_marginLeft="20dp"
-		          android:layout_height = "wrap_content"
-		android:textColor="@android:color/white"/>
-	</LinearLayout>
+		<ListView
+				android:id="@+id/demo_list"
+				android:layout_width = "match_parent"
+		          android:layout_height = "match_parent"/>
 
 </FrameLayout>
