加入了类似qq侧滑菜单组件

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -2,5 +2,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string-array name="ui_demo_func_list">
         <item>XbmPlayerFragment</item>
+        <item>SkidMenuActivity</item>
     </string-array>
 </resources>
