添加了列表项的滑动删除与标题栏停靠组件

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -3,5 +3,6 @@
     <string-array name="ui_demo_func_list">
         <item>XbmPlayerFragment</item>
         <item>SkidMenuActivity</item>
+        <item>SwipeMenuFragment</item>
     </string-array>
 </resources>
