--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<dimen name = "dimen_28sp">28sp</dimen>
+	<dimen name="item_height">60dp</dimen>
+	<dimen name="item_margin">10dp</dimen>
+	<dimen name = "dp_10">10dp</dimen>
+	<dimen name = "dp_70">70dp</dimen>
 </resources>
