--- a/ui-framework/UIFrameworkDemo/app/src/main/res/layout/swipe_menu_fragment.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/layout/swipe_menu_fragment.xml
@@ -1,15 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
-              android:orientation = "vertical"
-              android:layout_width = "match_parent"
-              android:layout_height = "match_parent">
-	<com.yanzhenjie.recyclerview.swipe.widget.StickyNestedScrollView
-			android:id="@+id/scroll_view"
+<android.support.design.widget.CoordinatorLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:fitsSystemWindows="true"
+		tools:context=".fragment.SwipeMenuFragment">
+
+	<android.support.design.widget.AppBarLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-	<com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
+			android:layout_height="wrap_content"
+			android:theme="@style/AppTheme.AppBarOverlay">
+
+		<android.support.v7.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="?attr/actionBarSize"
+				android:background="?attr/colorPrimary"
+				app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+	</android.support.design.widget.AppBarLayout>
+
+	<android.support.v7.widget.RecyclerView
 			android:id="@+id/recycler_view"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"/>
-	</com.yanzhenjie.recyclerview.swipe.widget.StickyNestedScrollView>
-</LinearLayout>
+			android:layout_height="wrap_content"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+</android.support.design.widget.CoordinatorLayout>
