--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -4,6 +4,7 @@
         <item>XbmPlayerFragment</item>
         <item>SkidMenuActivity</item>
         <item>SwipeMenuFragment</item>
+        <item>BottomBarActivity</item>
     </string-array>
 
     <string-array name="main_item">
