--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/colors.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
 	<color name="white">#FFFFFFFF</color>
 	<color name="white_pressed">#FFCFCFCF</color>
 	<color name="divider_color">#FFB7B2B2</color>
+	<color name="test">#489</color>
+	<color name="green">#46c01b</color>
+	<color name="greenDark">#40a00a</color>
 </resources>
