增加了滑动返回的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -5,6 +5,7 @@
         <item>SkidMenuActivity</item>
         <item>SwipeMenuFragment</item>
         <item>BottomBarActivity</item>
+        <item>SwipeBackTestActivity</item>
     </string-array>
 
     <string-array name="main_item">
