添加了下拉刷新的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -6,6 +6,7 @@
         <item>SwipeMenuFragment</item>
         <item>BottomBarActivity</item>
         <item>SwipeBackTestActivity</item>
+        <item>PullToRefreshActivity</item>
     </string-array>
 
     <string-array name="main_item">
