--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/styles.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/styles.xml
@@ -11,4 +11,16 @@
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+	<style name="AppTheme.Toolbar" parent="Widget.AppCompat.ActionBar">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">?attr/actionBarSize</item>
+		<item name="android:background">?attr/colorPrimary</item>
+		<item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+	</style>
+	<style name="AppTheme.Toolbar.Light">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">?attr/actionBarSize</item>
+		<item name="android:background">@android:color/transparent</item>
+		<item name="android:theme">@style/ThemeOverlay.AppCompat.Light</item>
+	</style>
 </resources>
