--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
 	<dimen name = "padding_common">10dp</dimen>
 	<dimen name = "padding_common_d">5dp</dimen>
 	<dimen name = "padding_common_h">15dp</dimen>
+	<dimen name = "textsize_content">14sp</dimen>
+	<dimen name = "textsize_title">17sp</dimen>
+
 </resources>
