--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -7,6 +7,7 @@
         <item>BottomBarActivity</item>
         <item>SwipeBackTestActivity</item>
         <item>PullToRefreshActivity</item>
+        <item>BannerPracticeActivity</item>
     </string-array>
 
     <string-array name="main_item">
