--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/styles.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/styles.xml
@@ -23,4 +23,18 @@
 		<item name="android:background">@android:color/transparent</item>
 		<item name="android:theme">@style/ThemeOverlay.AppCompat.Light</item>
 	</style>
+
+	<style name="AppTheme.Label">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center_vertical</item>
+		<item name="android:singleLine">true</item>
+		<item name="android:textSize">@dimen/textsize_content</item>
+		<item name="android:textColor">@color/colorTextContent</item>
+	</style>
+
+	<style name="AppTheme.Label.Title">
+		<item name="android:textColor">@color/colorTextTitle</item>
+		<item name="android:textSize">@dimen/textsize_title</item>
+	</style>
 </resources>
