增加了列表快速索引功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -8,6 +8,7 @@
         <item>SwipeBackTestActivity</item>
         <item>PullToRefreshActivity</item>
         <item>BannerPracticeActivity</item>
+        <item>IndexBarFragment</item>
     </string-array>
 
     <string-array name="main_item">
