添加了组件之间的过度动画功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -9,6 +9,7 @@
         <item>PullToRefreshActivity</item>
         <item>BannerPracticeActivity</item>
         <item>IndexBarFragment</item>
+        <item>ExpectMainActivity</item>
     </string-array>
 
     <string-array name="main_item">
