--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
 	<dimen name = "padding_common_h">15dp</dimen>
 	<dimen name = "textsize_content">14sp</dimen>
 	<dimen name = "textsize_title">17sp</dimen>
+	<dimen name = "dimen_90dp">90dp</dimen>
 
 </resources>
