增加了数据加载布局占位的功能

--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/array.xml
@@ -12,6 +12,8 @@
         <item>ExpectMainActivity</item>
         <item>FloatButtonFragment</item>
         <item>MatisseFragment</item>
+        <item>Meteria-Animations</item>
+        <item>FiftyshadeFragment</item>
     </string-array>
 
     <string-array name="main_item">
