--- a/ui-framework/UIFrameworkDemo/app/src/main/res/values/colors.xml
+++ b/ui-framework/UIFrameworkDemo/app/src/main/res/values/colors.xml
@@ -23,4 +23,35 @@
 	<color name = "colorTextContent">#444444</color>
 	<color name = "colorTextTitle">#333333</color>
 	<color name="colorPrimaryOverlay">#cc0094ff</color>
+	<color name="sample_red">#ff4444</color>
+	<color name="sample_blue">#33b5e5</color>
+	<color name="sample_green">#669900</color>
+	<color name="sample_yellow">#ff8800</color>
+	<color name="material_animations_primary">#039BE5</color>
+	<color name="material_animations_primary_dark">#0277BD</color>
+	<color name="text_light">@android:color/white</color>
+	<color name="text_dark">#616161</color>
+	<color name="light_grey">#E0E0E0</color>
+	<color name="theme_blue_background">#84ffff</color>
+	<color name="theme_red_background">#ff8a80</color>
+	<color name="theme_yellow_background">#ffff8d</color>
+	<color name="theme_green_background">#b9f6ca</color>
+	<color name="theme_red_primary">#ff5252</color>
+	<color name="theme_red_text">@color/text_light</color>
+	<color name="theme_red_primary_dark">#e64a4a</color>
+	<color name="theme_red_accent">#fffc19</color>
+	<color name="theme_green_primary">#669900</color>
+	<color name="theme_green_text">@color/text_dark</color>
+	<color name="theme_green_primary_dark">#558B2F</color>
+	<color name="theme_green_accent">#e919ff</color>
+
+	<color name="theme_blue_primary">#4FC3F7</color>
+	<color name="theme_blue_accent">#ff193a</color>
+	<color name="theme_blue_text">@color/text_dark</color>
+	<color name="theme_blue_text_inverse">@android:color/black</color>
+	<color name="theme_blue_primary_dark">#039BE5</color>
+	<color name="theme_yellow_primary">#ff8800</color>
+	<color name="theme_yellow_accent">#19dcff</color>
+	<color name="theme_yellow_text">@color/text_dark</color>
+	<color name="theme_yellow_primary_dark">#EF6C00</color>
 </resources>
